# Basic-OS

./: README.md
FileSystem/: CMakeLists.txt  main.c  utils.c  utils.h
FileSystem/cluster/: data_cluster.c  data_cluster.h
FileSystem/dir/: dir_entry.c  dir_entry.h
FileSystem/shell/: shell.c  shell.h  utils.c  utils.h
FileSystem/shell/append/: append_file.c  append_file.h
FileSystem/shell/create/: make_file.c  make_file.h
FileSystem/shell/init/: init_file_system.c  init_file_system.h
FileSystem/shell/load/: load_file_system.c  load_file_system.h
FileSystem/shell/ls/: list_directories.c  list_directories.h
FileSystem/shell/mkdir/: make_directory.c  make_directory.h
FileSystem/shell/read/: read_file.c  read_file.h
FileSystem/shell/unlink/: delete_directory.c  delete_directory.h
FileSystem/shell/write/: write_file.c  write_file.h
